<resources>
    <string name="app_name">TripPin</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAnPRQ6LKaUKAQwWjQAr1YaTzNjDXdtqZ8
    </string>
    <!--<string name="google_directions_key">AIzaSyAKtIN4hAxlEGOTBbNLB6sB0yayzrcRt50</string>-->
    <string name="facebook_app_id">215449252187745</string>
    <string name="progress_post">In Progress</string>
    <string name="post">Post</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">The world is your wall</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of Anywall</string>
    <string name="prompt_post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="queryButtonText">Query Route</string>
    <string name="likeRoute">Like Route</string>
    <string name="unlikeRoute">Unlike Route</string>
    <string name="queryRouteLikes">Query Route for Likes</string>
    <string name="queryUserLikes">Query User for Routes Liked</string>
    <string name="profile">profile</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="action_search">Search</string>
    <string name="enterRouteDetails">Enter Route Details</string>
    <string name="make_route">Make Route</string>
    <string name="name_your_route">Name your route!</string>
    <string name="add_additional_info">Add additional info.</string>
    <string name="save_route">Save Route</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="descriptionhint">Enter description here</string>
    <string name="scrolledDownName">Kimberly!</string>
    <string name="comment">Comment</string>
    <string name="route_name">Route Name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="no_user">No user</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_labels">Select labels</string>
    <string name="show_routes_for">Show routes for:</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="title_here">Title Here</string>
    <string name="location">Name your waypoint</string>
    <string name="create_new_waypoint">Create New Waypoint</string>
    <string name="description">Description</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="create_party">create party</string>
    <string name="friends">Friends</string>
    <string name="view_on_map">View on map</string>
    <string name="create_a_party">Create a party</string>
    <string name="footerText">Loading</string>
    <string name="likes"> Likes</string>
    <string name="street_view">Street View</string>
    <string name="weather">Weather</string>
    <string name="invite_people">Invite people</string>
    <string name="tags">Tags</string>
    <string name="progress_dialog_text">Publishing your trip!</string>
    <string name="hosted_by">Hosted by</string>
    <string name="enter_event_description">Enter event description.</string>
    <string name="send">Send</string>
    <string name="message_hint">Post something</string>
    <string name="comments">Comments</string>
    <string name="comment_dialog_text">Posting your comment!</string>
</resources>
