<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="5dp" android:layout_width="match_parent" android:background="@color/transparent_white" android:layout_height="260dp" >

    <View
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="48dp"

        android:background="@color/colorPrimary"
        android:id="@+id/top_bar"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/create_new_waypoint"
        android:textSize="23sp"
        android:paddingTop="10dp"
        android:paddingLeft="12dp"
        android:layout_alignParentTop="true"
        android:id="@+id/dialogTitle"
        android:layout_marginBottom="4dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_below="@+id/top_bar">

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etLocation"
            android:text="@string/location"
            android:layout_marginBottom="6dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:minLines="1"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:id="@+id/etTitle"
            android:layout_below="@+id/etLocation"
            android:text="@string/title_here"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:layout_marginBottom="6dp"
            android:hint="Enter Waypoint Name" />
        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription"
            android:layout_below="@id/etTitle"
            android:text="@string/description"
            android:gravity="top|start"
            android:layout_marginBottom="4dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:minHeight="16dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:id="@+id/etDescription"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/btnConfirm"
            android:layout_alignParentEnd="true"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:hint="@string/descriptionhint"
            android:layout_below="@+id/tvDescription"
            android:layout_marginBottom="17dp"
            android:gravity="start" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/btnDelete"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/etDescription"
            android:layout_toStartOf="@+id/btnConfirm"
            android:layout_marginEnd="18dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/btnConfirm"
            android:background="@android:color/transparent"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="4dp" />





    </RelativeLayout>
</RelativeLayout>