<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="5dp" android:layout_width="match_parent" android:background="@android:color/white" android:layout_height="150dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/btnConfirm"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/btnDelete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/etTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="Title Here" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/etDescription"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnConfirm"
        android:layout_alignParentEnd="true"
        android:hint="@string/descriptionhint"
        android:layout_below="@+id/etTitle" />

</RelativeLayout>